--- a/Web/admin/components/admin.css
+++ b/Web/admin/components/admin.css
@@ -1,7 +1,7 @@
 
 .body{
-    margin-left:10%;
-    margin-right:10%;
+    margin-left:15%;
+    margin-right:15%;
     background-color: rgba(201, 114, 114, 0.36);
     padding: 10px;
     min-height: 100vh;
@@ -30,4 +30,8 @@
     display: flex;
     justify-content: center;
     margin-top: 50px;
+}
+.inventory-img{
+    height:10px;
+    background-color: rgba(72, 163, 241, 0.925);
 }
