--- a/session/RetailProject/admin/components/admin.css
+++ b/session/RetailProject/admin/components/admin.css
@@ -1,7 +1,6 @@
 
 .body{
-    margin-left:15%;
-    margin-right:15%;
+    width:100%;
     background-color: rgba(201, 114, 114, 0.36);
     padding: 10px;
     min-height: 100vh;
