--- a/session/RetailProject/admin/components/nav.html
+++ b/session/RetailProject/admin/components/nav.html
@@ -1,28 +1,41 @@
-<nav class="navbar navbar-expand-lg navbar-light nav-bg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link text-body" aria-current="page" href="adminHome.php">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-body" href="summary.php">Summary</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-body" href="inventory.php">Inventory</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-body" href="addItem.php">New</a>
-          </li>
-          
-        </ul>
-        
-        
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Ninth navbar example">
+  <div class="container-xl">
+      <!-- <a class="navbar-brand" href="#"><img src="https://getbootstrap.com/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"></a> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+      <div class="collapse navbar-collapse " id="navbarsExample07XL">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  
+              <li class="nav-item dropdown">
+                  <!-- <a class="nav-link dropdown-toggle" href="#" id="dropdown07XL" data-bs-toggle="dropdown" aria-expanded="false"><img style="height:40px; width:40px;"src="https://scontent.fcyz2-1.fna.fbcdn.net/v/t39.30808-6/244976937_4755597054502756_2532027396837009658_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZROV0RFscw4AX8mWKB7&_nc_oc=AQlG-yw4ReOnGBii9qNCnr6nbkV1UJEiorGnZEUAumEx4A5g_P-Sl99BXz_izO0vsaA&_nc_ht=scontent.fcyz2-1.fna&oh=54f2088dca621bc979648d163537c9d8&oe=61B5984E" class="rounded-circle" alt="profile"></a> -->
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown07XL" data-bs-toggle="dropdown" aria-expanded="false">Hi <?php echo $_SESSION['admin_User'];?>!</a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdown07XL">
+                  <li>
+                      <form action="adminHome.php" method="post">
+                      <input  class="dropdown-item"type='submit' value='Logout' name='logout'>
+                      </form>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Update Profile</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page"href="adminHome.php">Home</a>
+              </li>
+            </li>
+
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page"  href="inventory.php">Inventory</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="summary.php">Orders</a>
+              </li>
+
+          </ul>
+                     
+
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
